--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,1 +1,7 @@
-/* здесь используйте глобальные переменные */
+$text-color-1: #333333;
+$main-color-1: #ffffff;
+$main-color-2: #7859cf;
+$main-color-3: #bdbdbd;
+$main-color-4: #f0ebff;
+$tablet-width: 768px;
+$desktop-width: 1440px;
