--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -4,13 +4,16 @@
   position: relative;
   padding: 20px 0 60px;
   overflow: hidden;
+  min-height: 656px;
 
   @media (min-width: variables.$tablet-width) {
     padding: 80px 0 0;
+    min-height: 828px;
   }
 
   @media (min-width: variables.$desktop-width) {
     padding: 30px 0 79px;
+    min-height: 714px;
   }
 }
 
@@ -134,7 +137,9 @@
   align-items: center;
   width: 62px;
   height: 24px;
+  background-color: transparent;
   cursor: pointer;
+  border: none;
 
   &::before {
     width: 62px;
