--- a/source/sass/blocks/page-navigation.scss
+++ b/source/sass/blocks/page-navigation.scss
@@ -22,6 +22,9 @@
     transform: translate(-1px, -1px);
     position: static;
     display: flex;
+    flex-direction: row;
+    width: auto;
+    justify-content: flex-start;
   }
 
   @media (min-width: variables.$desktop-width) {
