--- a/source/sass/blocks/slider-list.scss
+++ b/source/sass/blocks/slider-list.scss
@@ -6,6 +6,7 @@
 
   &--active {
     display: block;
+    overflow-anchor: none;
 
     @media (min-width: variables.$tablet-width) {
       padding: 0 60px;
@@ -132,11 +133,13 @@
   margin: 0 0 20px;
   padding: 0;
   text-align: center;
+  min-height: 100px;
 
   @media (min-width: variables.$tablet-width) {
     max-width: 590px;
     font-size: 20px;
     line-height: 32px;
+    min-height: auto;
   }
 
   br {
@@ -156,12 +159,12 @@
 
 .slider-list__order-wrapper {
   margin: 0;
-  padding: 0 25px;
+  padding: 0;
   display: flex;
   justify-content: center;
   align-items: flex-start;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 16px;
 
   @media (min-width: variables.$tablet-width) {
     margin-bottom: 20px;
@@ -180,6 +183,7 @@
   align-items: center;
   flex-wrap: wrap;
   gap: 6px;
+  min-width: 100px;
   max-width: 120px;
 }
 
@@ -194,6 +198,7 @@
 
 .slider-list__new-price {
   @include new-price;
+  min-width: 52px;
 }
 
 .slider-list__button {
