--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -7,7 +7,7 @@
   min-height: 656px;
 
   @media (min-width: variables.$tablet-width) {
-    padding: 80px 0 0;
+    padding: 60px 0 0;
     min-height: 828px;
   }
 
@@ -82,7 +82,7 @@
     background: linear-gradient(-90deg, rgba(120, 89, 207, 0.25) 0%, rgba(120, 89, 207, 0) 100%);
   }
 
-  &--disabled {
+  &:disabled {
     color: variables.$main-color-3;
     pointer-events: none;
   }
@@ -120,19 +120,24 @@
 
 .hero__slider-pagination {
   display: none;
+  margin: 0;
+  padding: 0;
   list-style-type: none;
 
   @media (min-width: variables.$desktop-width) {
     position: absolute;
-    bottom: 46px;
-    left: calc(50vw - 141px);
+    bottom: 60px;
+    left: calc(50vw - 101px);
     display: flex;
     flex-wrap: wrap;
     gap: 8px;
+    max-width: 380px;
   }
 }
 
 .hero__slider-pagination-link {
+  margin: 0;
+  padding: 0;
   display: flex;
   align-items: center;
   width: 62px;
