--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -2,7 +2,7 @@
 
 .button {
   margin: 0;
-  padding: 9px 20px 7px;
+  padding: 9px 20px 7px 20px;
   background-color: variables.$main-color-2;
   color: variables.$main-color-1;
   font-family: inherit;
