--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -2,14 +2,14 @@
 @use "../global/variables.scss";
 
 .features {
-  padding: 50px 0 60px;
+  padding: 50px 0 39px;
 
   @media (min-width: variables.$tablet-width) {
-    padding: 55px 0 100px;
+    padding: 55px 0 80px;
   }
 
   @media (min-width: variables.$desktop-width) {
-    padding: 100px 0 120px;
+    padding: 100px 0 100px;
   }
 }
 
@@ -39,13 +39,13 @@
 }
 
 .features__list {
-  margin: 0;
+  margin: 0 0 20px;
   padding: 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  gap: 32px;
+  gap: 31px;
   list-style-type: none;
 
   @media (min-width: variables.$tablet-width) {
@@ -54,6 +54,7 @@
     grid-template-columns: 1fr auto;
     column-gap: 30px;
     row-gap: 50px;
+    align-items: start;
   }
 
   @media (min-width: variables.$desktop-width) {
@@ -155,7 +156,7 @@
 
 .features__item-title {
   @include item-title;
-  margin: 0 0 4px;
+  margin: 0 0 5px;
   max-width: 280px;
   text-align: center;
 
