--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,11 +1,11 @@
 @use "../global/variables.scss";
 
 .footer {
-  padding: 15px 0 30px;
+  padding: 20px 0 30px;
   overflow: hidden;
 
   @media (min-width: variables.$tablet-width) {
-    padding: 35px 0 40px;
+    padding: 40px 0 40px;
   }
 }
 
@@ -86,7 +86,7 @@
   margin: 0;
   padding: 0;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-wrap: wrap;
   gap: 20px;
   list-style-type: none;
@@ -149,7 +149,8 @@
 }
 
 .footer__contacts-link {
-  display: flex;
+  display: grid;
+  grid-template-columns: 13px 1fr;
   gap: 6px;
   color: variables.$text-color-1;
   text-decoration: none;
@@ -182,16 +183,24 @@
   }
 }
 
+.footer__contacts-icon {
+  grid-column: 1;
+}
+
 .footer__contacts-text {
+  grid-column: 2;
   font-style: normal;
 }
 
 .footer__developer {
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   gap: 4px;
+  max-width: 210px;
   color: #bdbdbd;
+  text-align: center;
   text-decoration: none;
   transition: all 0.2s ease;
 
@@ -208,7 +217,10 @@
   }
 
   @media (min-width: variables.$desktop-width) {
+    margin: 0;
     grid-column: -1/1;
+    max-width: 900px;
+    justify-self: center;
   }
 }
 
