--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -46,33 +46,6 @@
   line-height: 24px;
 }
 
-.form__range {
-  position: relative;
-  margin: 9px 0 34px;
-  width: 100%;
-  height: 4px;
-  background-color: #e2e2e2;
-
-  @media (min-width: variables.$tablet-width) {
-    margin-bottom: 30px;
-    max-width: 223px;
-  }
-
-  @media (min-width: variables.$desktop-width) {
-    margin-bottom: 32px;
-  }
-}
-
-.form__range-bar {
-  position: absolute;
-  height: 4px;
-  background-color: #9070ec;
-}
-
-.form__range-toggle {
-  position: absolute;
-}
-
 .form__price-wrapper {
   position: relative;
   margin: 0 0 1px;
@@ -126,6 +99,10 @@
   &:focus {
     border-color: #593cac;
     outline: none;
+  }
+
+  &:active {
+    opacity: 0.8;
   }
 
   &:disabled {
