--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -7,15 +7,25 @@
 }
 
 .header__container {
-  display: flex;
+  display: grid;
+  grid-template-columns: 60px 1fr;
   justify-content: space-between;
-  align-items: center;
+  align-items: start;
+
+  @media (min-width: variables.$tablet-width) {
+    grid-template-columns: 90px 1fr;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    grid-template-columns: 400px 1fr;
+  }
 }
 
 .header__logo {
-  padding-top: 4px;
+  padding-top: 12px;
 
   @media (min-width: variables.$tablet-width) {
+    padding-top: 22px;
     margin-right: 67px;
     width: 82px;
   }
@@ -29,7 +39,9 @@
 
 .header__navigation {
   display: flex;
-  align-items: center;
+  justify-content: flex-end;
+  align-items: flex-start;
+  flex-wrap: wrap;
 
   @media (min-width: variables.$tablet-width) {
     column-gap: 60px;
