--- a/source/sass/blocks/page-navigation.scss
+++ b/source/sass/blocks/page-navigation.scss
@@ -21,14 +21,19 @@
   @media (min-width: variables.$tablet-width) {
     transform: translate(-1px, -1px);
     position: static;
+    flex-shrink: 0;
     display: flex;
     flex-direction: row;
-    width: auto;
     justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    width: auto;
+    max-width: 440px;
   }
 
   @media (min-width: variables.$desktop-width) {
     gap: 20px;
+    max-width: 520px;
   }
 }
 
@@ -37,7 +42,9 @@
   border-top: 1px solid variables.$main-color-4;
 
   @media (min-width: variables.$tablet-width) {
+    transform: translateY(1px);
     width: auto;
+    max-width: 120px;
     border: none;
   }
 
@@ -54,6 +61,8 @@
   padding: 20px;
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
+  word-break: break-word;
 
   @media (min-width: variables.$tablet-width) {
     padding: 32px 20px 30px;
@@ -77,4 +86,8 @@
       content: "";
     }
   }
+}
+
+.page-navigation__text {
+  text-align: center;
 }
